resource-manifests/ingress/coit-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "k8s.damodardevops.click"
    secretName: k8s.damodardevops.click
  rules:
  - host: k8s.damodardevops.click
    http:
      paths:
      - backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
        path: /
        pathType: Prefix
